--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,12 +105,12 @@ dependencies {
     androidTestImplementation "androidx.test:rules:$androidXTestRulesVersion"
     androidTestImplementation "androidx.room:room-testing:$roomVersion"
     androidTestImplementation "androidx.arch.core:core-testing:$archTestingVersion"
-    androidTestImplementation "org.robolectric:annotations:$robolectricVersion"
+    androidTestImplementation "org.robolectric:annotations:4.8"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espressoVersion"
     androidTestImplementation "androidx.test.espresso:espresso-contrib:$espressoVersion"
     androidTestImplementation "androidx.test.espresso:espresso-intents:$espressoVersion"
     androidTestImplementation "androidx.test.espresso.idling:idling-concurrent:$espressoVersion"
-    androidTestImplementation "junit:junit:$junitVersion"
+    androidTestImplementation "junit:junit:4.13.2"
 
     // Once https://issuetracker.google.com/127986458 is fixed this can be testImplementation
 
